; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-sctp.c_sctp_selftest.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-sctp.c_sctp_selftest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.sctp_selftest.testcase = private unnamed_addr constant [33 x i8] c"\D1`\00P\00\00\00\00X\E4]6\01\00\00\14\9E\8DR%\00\00\80\00\00\0A\08\00F\1A\DF=\00", align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sctp_selftest() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [33 x i8], align 16
  %3 = alloca i32, align 4
  %4 = bitcast [33 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([33 x i8], [33 x i8]* @__const.sctp_selftest.testcase, i32 0, i32 0), i64 33, i1 false)
  %5 = getelementptr inbounds [33 x i8], [33 x i8]* %2, i64 0, i64 0
  %6 = call i32 @sctp_checksum(i8* %5, i32 32)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 1491361078
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %11

10:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %9
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @sctp_checksum(i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
